--- a/css/mobile.css
+++ b/css/mobile.css
@@ -1,6 +1,20 @@
-@media screen and (max-width:721px){
+@media screen and (max-width:768px){
+    body{
+        background: none;
+    }
     .cont{
         flex-direction: column;
+        margin-top: 0;
+        border:none;
+        border-radius:0;
+    }
+    
+    .mw-1{
+        max-width: 100vw;
+    }
+
+    .m-auto{
+        margin:0;
     }
 
     .c-form{
@@ -16,11 +30,15 @@
         font-size:x-large;
     }
 
+    .c-form form input,textarea{
+        font:small-caption;
+    }
+
     .c-info{
         width: 100%;
         padding-bottom: 50px;
-        border-radius: 0;
-        border-bottom-left-radius: 60px;
-        border-bottom-right-radius: 60px;
+        border-radius: 60px;
+        /* border-bottom-left-radius: 60px;
+        border-bottom-right-radius: 60px; */
     }
 }
