--- a/css/team.css
+++ b/css/team.css
@@ -71,14 +71,17 @@ body{
 .cat-2{
     margin: -1px 5px;
     padding-left: 10px;
+    padding-top: 10px;
 }
 
 .cat-2 h3{
     font-weight: 800;
+    padding: 10px 0;
 }
 
 .cat-2 p,span{
     font-size:smaller;
+    padding: 10px 0;
 }
 
 .players{
